# deezer-qt-client

./: CMakeLists.txt  CMakeLists.txt.user.ae6929a  README.md  deezer-qt-client_ru_RU.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
api/: deezer.cpp  deezer.h
api/exception/: deezer_exception.cpp  deezer_exception.h  oauth_exception.cpp  oauth_exception.h
api/object/compilation/: chart.cpp  chart.h  editorial.cpp  editorial.h
api/object/playable/: album.cpp  album.h  artist.cpp  artist.h  genre.cpp  genre.h  playlist.cpp  playlist.h  podcast.cpp  podcast.h  radio.cpp  radio.h  shared.h  track.cpp  track.h
api/object/search/: advanced_search_query.cpp  advanced_search_query.h  partial_search_response.cpp  partial_search_response.h  shared.h
api/object/service/: infos.cpp  infos.h  offer.cpp  offer.h  options.cpp  options.h  permissions.h
api/object/user/: folder.cpp  folder.h  user.cpp  user.h
api/object/util/: serializable.h
api/util/: json_serialization.cpp  json_serialization.h  serialization.cpp  serialization.h  xml_serialization.cpp  xml_serialization.h
model/: albumtracksmodel.cpp  albumtracksmodel.h  searchtracksmodel.cpp  searchtracksmodel.h
pages/: albumpage.cpp  albumpage.h  albumpage.ui  artistpage.cpp  artistpage.h  artistpage.ui  mainpage.ui  pages.h  playlistpage.cpp  playlistpage.h  playlistpage.ui  radiopage.cpp  radiopage.ui  searchpage.cpp  searchpage.h  searchpage.ui  userpage.cpp  userpage.h  userpage.ui
widgets/: albumcard.cpp  albumcard.h  albumcard.ui  albumflow.cpp  albumflow.h  albumflow.ui  artistcard.cpp  artistcard.h  artistcard.ui  artistflow.cpp  artistflow.h  artistflow.ui  flow.cpp  flow.h  flow.ui  playlistcard.cpp  playlistcard.h  playlistcard.ui  playlistflow.cpp  playlistflow.h  playlistflow.ui  radiocard.cpp  radiocard.h  radiocard.ui  radioflow.cpp  radioflow.h  radioflow.ui  usercard.cpp  usercard.h  usercard.ui  userflow.cpp  userflow.h  userflow.ui
widgets/layouts/: albumcarousel.cpp  albumcarousel.h  albumflow.cpp  albumflow.h  artistcarousel.cpp  artistcarousel.h  artistflow.cpp  artistflow.h  carousel.h  flow.h  icarousel.h  playlistflow.cpp  playlistflow.h  radioflow.h  userflow.cpp  userflow.h
widgets/models/: albumtracksmodel.h  searchtracksmodel.cpp  searchtracksmodel.h
